--- a/app/views/football_grounds/edit.html.erb
+++ b/app/views/football_grounds/edit.html.erb
@@ -1,22 +1,22 @@
-<h1><%= h @title%></h1>
-<div class="seperateLine"></div>
+<div class="sect">
+  <h2><%= h @title%></h2>
+  <%= error_messages_for :football_ground %>
 
-<%= error_messages_for :football_ground %>
-
-<% form_for(@football_ground) do |f| %>
-  
-<p>
-  <b>状态</b><br />
-  <%(@football_ground.status == 0 ? [["待审核", 0], ["审核通过", 1], ["停用", 2]] : [["正常", 1], ["停用", 2]]).each do |v| %>
-    <%= f.radio_button :status, v[1] %><%=v[0]%>
-  <%end%>
-</p>
-  
-  <%= render :partial => "form", :locals=>{:f=> f}%>
+  <% form_for(@football_ground) do |f| %>
 
   <p>
-    <%= f.submit "更新" %>
+    <b>状态</b><br />
+    <%(@football_ground.status == 0 ? [["待审核", 0], ["审核通过", 1], ["停用", 2]] : [["正常", 1], ["停用", 2]]).each do |v| %>
+      <%= f.radio_button :status, v[1] %><%=v[0]%>
+    <%end%>
   </p>
-<% end %>
 
-<%= (button_to '删除', @football_ground, :confirm => '确定删除？', :method => :delete) if @football_ground.status == 0 %>
+    <%= render :partial => "form", :locals=>{:f=> f}%>
+
+    <p>
+      <%= f.submit "更新" %>
+    </p>
+  <% end %>
+
+  <%= (button_to '删除', @football_ground, :confirm => '确定删除？', :method => :delete) if @football_ground.status == 0 %>
+</div>
