--- a/app/views/team_joins/index_team.html.erb
+++ b/app/views/team_joins/index_team.html.erb
@@ -1,13 +1,13 @@
-<h1><%= h @title%></h1>
-<div class="seperateLine"></div>
-
 <%if @admin_teams.length > 0%>
-<h2>管理的球队</h2>
-<%= render(:partial => 'shared/team_icon', :collection => @admin_teams)%>
-  
-<div class="seperateLine clearBoth"></div>
+<div class="sect">
+  <h2>管理的球队</h2>
+  <%= render(:partial => 'shared/team_icon', :collection => @admin_teams)%>
+  <div class="clearBoth"></div>
+</div>
 <%end%>
 
-<h2>参加的球队</h2>
-<%= render(:partial => 'shared/team_icon', :collection => @other_teams)%>
-<div class="clearBoth"></div>
+<div class="sect">
+  <h2>参加的球队</h2>
+  <%= render(:partial => 'shared/team_icon', :collection => @other_teams)%>
+  <div class="clearBoth"></div>
+</div>
