--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -9,145 +9,156 @@
   <%= stylesheet_link_tag 'activityitem' %>
 <%end%>
 
-<h1><%=h @title%></h1>
 <div id="left_content">
-<div class="seperateLine"></div>
-
-<%if @team_join_request != nil || @team_join_invitation != nil || @team_join_request_count > 0 %>
-<div class="notification">
-  <%if @team_join_request != nil%>
-    <span>等待确认<%=h @team.shortname%>加入申请</span>
-  <%end%>
-
-  <%if @team_join_invitation != nil%>
-    <span><%=h @team.shortname%>邀请你加入</span>
-    <%= link_to '接受', team_joins_path(:id=>@team_join_invitation.id, :back_uri => request.request_uri), :method => :post %>
-    <%= link_to '拒绝', team_join_invitation_path(@team_join_invitation.id, :back_uri => request.request_uri), :method => :delete %>
-  <%end%>
-  
-  <%if @team_join_request_count > 0%>
-    队伍有<%= link_to "#{@team_join_request_count}个加入申请", team_team_join_requests_path(@team) if @team_join_request_count > 0 %>
-  <%end%>
-</div>
-<%end%>
-
-<div class="tab_container">
-  <%if logged_in? %>
-    <span class="shortcut">
-    <%if @can_quit%>
-      <%= link_to(image_tag("quitFromTeam.gif", :title=>"退出球队"), team_join_path(@user_team.id),:method=>:delete)%>
-    <%elsif @can_request%>
-      <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"申请加入球队"), '#', 
-            :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");return false;')%>
-    <%end%>
-    <%if current_user.is_team_admin_of?(@team)%>
-      <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请朋友加入"), new_team_team_join_invitation_path(@team))%>
-    <%end%>
-    <%if logged_in? && current_user.can_invite_team?(@team) %>
-      <%=link_to(image_tag("inviteMacth.gif", :title=>"邀请该队参加比赛"), new_match_invitation_path(:guest_team_id=>@team))%>
-    <%end%>
-    </span>
-  <%end%>
-
-  <span class="tab_link" style="margin-left: 10px;">队伍信息</span>
-  <div class="tab">
-  <%= "<span>球队全名: #{h @team.name}</span><br/>" unless @team.name.blank?%>
-  <%= "<span>所在地: #{@team.city_text}</span><br/>" unless @team.city_text.nil?%>
-  <%= "<span>建队时间: #{@team.found_time}</span><br/>" unless @team.found_time.nil?%>
-  <%= "<span>球队风格: #{h @team.style}</span><br/>" unless @team.style.blank?%>
-  <%if !@team.summary.blank?%>
-      <label>球队简介：</label>
-      <p><%=simple_format auto_link(h(@team.summary), :urls)%></p>
-  <%end%>
-  </div>
-  
-  <div style="margin: 10px 0 0 10px">
-    <%if logged_in? %>
-      <%if @can_quit%>
-        <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
-      <%elsif @can_request%>
-        <%= link_to("申请加入球队", '#', 
-            :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");;return false;')%>
+  <div class="sect">
+    <%if @team_join_request != nil || @team_join_invitation != nil || @team_join_request_count > 0 %>
+    <div class="notification">
+      <%if @team_join_request != nil%>
+        <span>等待确认<%=h @team.shortname%>加入申请</span>
       <%end%>
-      <%if current_user.is_team_admin_of?(@team)%>
-        <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
+
+      <%if @team_join_invitation != nil%>
+        <span><%=h @team.shortname%>邀请你加入</span>
+        <%= link_to '接受', team_joins_path(:id=>@team_join_invitation.id, :back_uri => request.request_uri), :method => :post %>
+        <%= link_to '拒绝', team_join_invitation_path(@team_join_invitation.id, :back_uri => request.request_uri), :method => :delete %>
       <%end%>
-      <%if current_user.can_invite_team?(@team) %>
-        <%=link_to("邀请该队进行比赛", new_match_invitation_path(:guest_team_id=>@team))%>
+
+      <%if @team_join_request_count > 0%>
+        队伍有<%= link_to "#{@team_join_request_count}个加入申请", team_team_join_requests_path(@team) if @team_join_request_count > 0 %>
       <%end%>
+    </div>
+    <%end%>
+
+    <h2><%=h @team.shortname%>的信息</h2>
+    <div class="tab_container">
+      <%if logged_in? %>
+        <span class="shortcut">
+        <%if @can_quit%>
+          <%= link_to(image_tag("quitFromTeam.gif", :title=>"退出球队"), team_join_path(@user_team.id),:method=>:delete)%>
+        <%elsif @can_request%>
+          <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"申请加入球队"), '#', 
+                :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");return false;')%>
+        <%end%>
+        <%if current_user.is_team_admin_of?(@team)%>
+          <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请朋友加入"), new_team_team_join_invitation_path(@team))%>
+        <%end%>
+        <%if logged_in? && current_user.can_invite_team?(@team) %>
+          <%=link_to(image_tag("inviteMacth.gif", :title=>"邀请该队参加比赛"), new_match_invitation_path(:guest_team_id=>@team))%>
+        <%end%>
+        </span>
+      <%end%>
+
+      <span class="tab_link" style="margin-left: 10px;">队伍信息</span>
+      <div class="tab">
+      <%= "<span>球队全名: #{h @team.name}</span><br/>" unless @team.name.blank?%>
+      <%= "<span>所在地: #{@team.city_text}</span><br/>" unless @team.city_text.nil?%>
+      <%= "<span>建队时间: #{@team.found_time}</span><br/>" unless @team.found_time.nil?%>
+      <%= "<span>球队风格: #{h @team.style}</span><br/>" unless @team.style.blank?%>
+      <%if !@team.summary.blank?%>
+          <label>球队简介：</label>
+          <p><%=simple_format auto_link(h(@team.summary), :urls)%></p>
+      <%end%>
+      </div>
+
+      <div style="margin: 10px 0 0 10px">
+        <%if logged_in? %>
+          <%if @can_quit%>
+            <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
+          <%elsif @can_request%>
+            <%= link_to("申请加入球队", '#', 
+                :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");;return false;')%>
+          <%end%>
+          <%if current_user.is_team_admin_of?(@team)%>
+            <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
+          <%end%>
+          <%if current_user.can_invite_team?(@team) %>
+            <%=link_to("邀请该队进行比赛", new_match_invitation_path(:guest_team_id=>@team))%>
+          <%end%>
+        <%end%>
+      </div>
+    </div>
+
+    <%if @can_request%>
+    <div id="send_team_join_request_div" class="jdialog">
+      <% form_for :team_join_request, :url => team_join_requests_path, :method=>"POST" do |f| %>
+        <%= f.hidden_field :team_id,  :value=>@team.id%> 
+        <span>给球队管理员留个言吧...</span><br />
+        <%= f.text_area :message, :cols => 30, :rows => 2%><br />
+        <%= f.submit "入队申请" %>
+        <%= f.submit "撤销", :onclick=>'j("#send_team_join_request_div").dialog("close");return false;' %>
+      <% end %>  
+    </div>
     <%end%>
   </div>
-</div>
 
-<%if @can_request%>
-<div id="send_team_join_request_div" class="jdialog">
-  <% form_for :team_join_request, :url => team_join_requests_path, :method=>"POST" do |f| %>
-    <%= f.hidden_field :team_id,  :value=>@team.id%> 
-    <span>给球队管理员留个言吧...</span><br />
-    <%= f.text_area :message, :cols => 30, :rows => 2%><br />
-    <%= f.submit "入队申请" %>
-    <%= f.submit "撤销", :onclick=>'j("#send_team_join_request_div").dialog("close");return false;' %>
-  <% end %>  
-</div>
-<%end%>
-
-<%if @trainings.length > 0%>
-<div class="seperateLine clearBoth"></div>
-<div style="margin-bottom:20px">
-<h2><%=h @team.shortname%>最近一次训练</h2>
-<div class="activity narrow_activity" style="border:none; padding: 0px">
-  <%= render :partial=>"shared/training_item", :locals => {:training => @trainings[0], :display_team => false}%>
-  <div class="clearBoth"></div>
-</div>
-</div>
-<%end%>
-
-<%if @matches.length > 0%>
-<div class="seperateLine clearBoth"></div>
-<div style="margin-bottom:20px">
-<h2><%=h @team.shortname%>最近的比赛</h2>
-<%= render(:partial => 'shared/match_list', :object => @matches, :locals=>{:current_team_id=>@team.id})%>
-</div>
-<%end%>
-
-<div class="seperateLine clearBoth"></div>
-<div style="margin-bottom:20px">        
-<h2><%=h @team.shortname%>的成员</h2>
-<%= render(:partial => 'shared/user_icon', :collection => @users)%>
-</div>
-
-<div class="seperateLine clearBoth"></div>
-<div style="margin-bottom:20px;">   
-  <h2><%=h @team.shortname%>下的讨论</h2>
-  <table class="list" style="width:100%">
-    <tr>
-      <th style="width:20%">作者</th>
-      <th style="width:80%">话题</th>
-    </tr>
-
-  <% for post in @posts %>
-    <tr>
-      <td><%=h post.user.nickname %></td>
-      <td><%=link_to h(post.title), post  %></td>
-    </tr>
-  <% end %>
-  </table>
-  <div style="margin: 10px 0  0 10px;float:right;">
-    <%if logged_in? && current_user.is_team_member_of?(@team)%>
-      > <%= link_to '发言', new_team_post_path(@team) %>
-    <%end%>
-    > <%= link_to '更多', team_posts_path(@team) %>
+  <%if @trainings.length > 0%>
+  <div class="sect">
+    <h2><%=h @team.shortname%>最近一次训练</h2>
+    <div class="activity narrow_activity" style="border:none; padding: 0px">
+      <div class="activity_date">
+        <div class="day">
+          <%= month_calendar_link(@trainings[0].start_time.strftime('%m'), @trainings[0].start_time)%>.<%= month_day_link(@trainings[0].start_time.day, @trainings[0].start_time)%></div>
+        <div class="week"><%= wday_text @trainings[0].start_time.wday%></div>
+      </div>
+      <div class="activity_content">
+        <%= @trainings[0].start_time.strftime('%H:%M')%>-<%= @trainings[0].end_time.strftime('%H:%M')%>,
+        <%= link_to_if !@trainings[0].football_ground_id.nil?, h(@trainings[0].location), football_ground_path(@trainings[0].football_ground_id)%>, 训练
+        <br/><br/>
+        <%if logged_in? %>
+          <%=link_to_if(@trainings[0].can_be_joined_by?(current_user), '我去', training_training_joins_path(@trainings[0]), :method=>'post'){} %>
+          <%=link_to_if(@trainings[0].can_be_quited_by?(current_user), '我不去', training_training_join_path(@trainings[0], 0), :method=>'delete'){} %>
+        <%end%>
+        <%=link_to '详情', training_view_path(@trainings[0])%>
+      </div>
+      <div class="clearBoth"></div>
+    </div>
+    <div class="clearBoth"></div>
   </div>
-</div>
+  <%end%>
+
+  <%if @matches.length > 0%>
+    <div class="sect">
+      <h2><%=h @team.shortname%>最近的比赛</h2>
+      <%= render(:partial => 'shared/match_list', :object => @matches, :locals=>{:current_team_id=>@team.id})%>
+    </div>
+  <%end%>
+
+  <div class="sect">        
+    <h2><%=h @team.shortname%>的成员</h2>
+    <%= render(:partial => 'shared/user_icon', :collection => @users)%>
+    <div class="clearBoth"></div>
+  </div>
+
+  <div class="sect">   
+    <h2><%=h @team.shortname%>下的讨论</h2>
+    <table class="list" style="width:100%">
+      <tr>
+        <th style="width:20%">作者</th>
+        <th style="width:80%">话题</th>
+      </tr>
+
+    <% for post in @posts %>
+      <tr>
+        <td><%=h post.user.nickname %></td>
+        <td><%=link_to h(post.title), post  %></td>
+      </tr>
+    <% end %>
+    </table>
+    <div style="margin: 10px 0  0 10px;float:right;">
+      <%if logged_in? && current_user.is_team_member_of?(@team)%>
+        > <%= link_to '发言', new_team_post_path(@team) %>
+      <%end%>
+      > <%= link_to '更多', team_posts_path(@team) %>
+    </div>
+  </div>
 </div>
 
 <div id="right_content">
-<div class=" clearBoth seperateLine"></div>
-<div style="margin-bottom:20px">
-  <h2><%=h @team.shortname%>的日程</h2>
-  <%= render(:partial => 'shared/highlight_calendar', 
-    :locals => {:date => Date.today, :trainings => @calendar_trainings_hash})%>
-  <div class="clearBoth"></div>
-</div>
+  <div class="sect">
+    <h2><%=h @team.shortname%>的日程</h2>
+    <%= render(:partial => 'shared/highlight_calendar', 
+      :locals => {:date => Date.today, :trainings => @calendar_trainings_hash})%>
+    <div class="clearBoth"></div>
+  </div>
 </div>
 <div class="clearBoth"></div>
