--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,7 +1,10 @@
-<%= error_messages_for :team %>
-<% form_for @team do |f| -%>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <%= error_messages_for :team %>
+  <% form_for @team do |f| -%>
 
-<%= render :partial => "form", :locals=>{:f=> f}%>
-    <%= hidden_field_tag :back_uri, params[:back_uri] if !params[:back_uri].nil?%>
-<p><%= submit_tag '创建' %></p>
-<% end -%>
+  <%= render :partial => "form", :locals=>{:f=> f}%>
+      <%= hidden_field_tag :back_uri, params[:back_uri] if !params[:back_uri].nil?%>
+  <p><%= submit_tag '创建' %></p>
+  <% end -%>
+</div>
