--- a/app/views/football_grounds/new.html.erb
+++ b/app/views/football_grounds/new.html.erb
@@ -1,14 +1,14 @@
-<h1><%= h @title%></h1>
-<div class="seperateLine"></div>
+<div class="sect">
+  <h2><%= h @title%></h2>
+  <%= error_messages_for :football_ground %>
 
-<%= error_messages_for :football_ground %>
+  <% form_for(@football_ground) do |f| %>
+    <%= hidden_field_tag :back_uri, params[:back_uri] if params[:back_uri]!=nil%>
 
-<% form_for(@football_ground) do |f| %>
-  <%= hidden_field_tag :back_uri, params[:back_uri] if params[:back_uri]!=nil%>
-  
-  <%= render :partial => "form", :locals=>{:f=> f}%>
+    <%= render :partial => "form", :locals=>{:f=> f}%>
 
-  <p>
-    <%= f.submit "提交" %>
-  </p>
-<% end %>
+    <p>
+      <%= f.submit "提交" %>
+    </p>
+  <% end %>
+</div>
