--- a/app/views/friend_invitations/index.html.erb
+++ b/app/views/friend_invitations/index.html.erb
@@ -1,8 +1,6 @@
-<h1><%=h @title%></h1>
-<div id="wide_left_content">
-<div class="seperateLine"></div>
-
-<table class="list">
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <table class="list">
   <tr>
     <th style="width:70px">&nbsp;</th>
     <th style="width:70px">申请时间</th>
@@ -29,18 +27,17 @@
     </tr>
   <% end %>
 </table>
-  
 </div>
 
-<div id="narrow_right_content">
-<div class="seperateLine"></div>
-<ul class="sidebar_menu">
-  <li>
-  > <%= link_to "邀请我加入的球队", team_join_invitations_path %>
-  </li>
-  <li>
-  > <%= link_to("我申请加入的球队", team_join_requests_path) %>
-  </li>
-</ul>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+    > <%= link_to "邀请我加入的球队", team_join_invitations_path %>
+    </li>
+    <li>
+    > <%= link_to("我申请加入的球队", team_join_requests_path) %>
+    </li>
+  </ul>
 </div>
 <div class="clearBoth"></div>
