--- a/app/views/friend_relations/index.html.erb
+++ b/app/views/friend_relations/index.html.erb
@@ -1,7 +1,7 @@
-<h1><%= h @title%></h1>
-<div class="seperateLine" style="margin-bottom:20px"></div>
-
-<%= render(:partial => 'shared/user_icon', :collection => @friendsList)%>
+<div class="sect">
+  <h2><%= h @title%></h2>
+  <%= render(:partial => 'shared/user_icon', :collection => @friendsList)%>
+</div>
 <div class="clearBoth"></div>
 
 
