--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,27 +1,24 @@
-<h1><%=h @title%></h1>
-<div id="wide_left_content">
-<div class="seperateLine"></div>
-<%= error_messages_for :post%>
-
-<% form_for :post, :url=>new_post_path2 do |f| %>
-  <%= render :partial=>'form', :locals => {:f=>f } %>
-  <p>
-    <%= f.submit "发言" %>
-  </p>
-<% end %>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <%= error_messages_for :post%>
+  <% form_for :post, :url=>new_post_path2 do |f| %>
+    <%= render :partial=>'form', :locals => {:f=>f } %>
+    <p>
+      <%= f.submit "发言" %>
+    </p>
+  <% end %>
 </div>
 
-<div id="narrow_right_content">
-<div class="seperateLine"></div>
-
-<ul class="sidebar_menu">
-  <li>
-    > <% if @training %>
-      <%= link_to '返回讨论区', training_posts_path(@training) %>
-    <% elsif @team %>
-      <%= link_to '返回讨论区', team_posts_path(@team) %>
-    <%end%>
-  </li>
-</ul>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <% if @training %>
+        <%= link_to '返回讨论区', training_posts_path(@training) %>
+      <% elsif @team %>
+        <%= link_to '返回讨论区', team_posts_path(@team) %>
+      <%end%>
+    </li>
+  </ul>
 </div>
 <div class="clearBoth"></div>
