--- a/app/views/team_join_invitations/index_team.html.erb
+++ b/app/views/team_join_invitations/index_team.html.erb
@@ -1,46 +1,43 @@
-<h1><%=h @title%></h1>
-<div id="wide_left_content">
-<div class="seperateLine"></div>
-
-<table class="list">
-  <tr>
-    <th style="width:70px">&nbsp;</th>
-    <th style="width:70px">邀请时间</th>
-    <th style="width:300px">留言</th>
-    <th style="width:100px">&nbsp;</th>
-  </tr>
-  <% for req in @requests %>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <table class="list">
     <tr>
-      <td><%= small_team_image_link req.team%></td>
-      <td><%=req.apply_date.to_s(:db) %></td>
-      <td>
-        <%= link_to h(req.team.shortname), team_view_path(req.team) %>邀请你加入
-        <br/><br/>
-        <%if !req.message.blank?%>
-          管理员留言:
-          <%= h(req.message) %>
-          <br/><br/>
-        <%end%>
-      </td>
-      <td>
-        <%= button_to '接受', team_joins_path(:id=>req.id, :back_uri => request.request_uri), :method => :post %>
-        <%= button_to '拒绝', team_join_invitation_path(req.id), :method => :delete %>
-      </td>
+      <th style="width:70px">&nbsp;</th>
+      <th style="width:70px">邀请时间</th>
+      <th style="width:300px">留言</th>
+      <th style="width:100px">&nbsp;</th>
     </tr>
-  <% end %>
-</table>
-  
+    <% for req in @requests %>
+      <tr>
+        <td><%= small_team_image_link req.team%></td>
+        <td><%=req.apply_date.to_s(:db) %></td>
+        <td>
+          <%= link_to h(req.team.shortname), team_view_path(req.team) %>邀请你加入
+          <br/><br/>
+          <%if !req.message.blank?%>
+            管理员留言:
+            <%= h(req.message) %>
+            <br/><br/>
+          <%end%>
+        </td>
+        <td>
+          <%= button_to '接受', team_joins_path(:id=>req.id, :back_uri => request.request_uri), :method => :post %>
+          <%= button_to '拒绝', team_join_invitation_path(req.id), :method => :delete %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
 </div>
 
-<div id="narrow_right_content">
-<div class="seperateLine"></div>
-<ul class="sidebar_menu">
-  <li>
-  > <%= link_to("希望和我成为朋友的用户", friend_invitations_path) %>
-  </li>
-  <li>
-  > <%= link_to("我申请加入的球队", team_join_requests_path) %>
-  </li>
-</ul>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+    > <%= link_to("希望和我成为朋友的用户", friend_invitations_path) %>
+    </li>
+    <li>
+    > <%= link_to("我申请加入的球队", team_join_requests_path) %>
+    </li>
+  </ul>
 </div>
 <div class="clearBoth"></div>
