--- a/app/views/team_join_invitations/new_by_team_id.html.erb
+++ b/app/views/team_join_invitations/new_by_team_id.html.erb
@@ -1,23 +1,22 @@
-<h1><%=h @title%></h1>
-<div class="seperateLine" style="margin-bottom:20px"></div>
+<div class="sect">
+  <h2><%=h @title%></h2>
+  <%if @friends.empty?%>
+    <span>没有可以邀请加入的朋友，可能你的朋友都已经加入了这只球队</span>
+  <%else%>
+    <% form_for :team_join_request, :url => team_join_invitations_path, :method=>"POST" do |f| %>
+      <%= f.hidden_field :team_id,  :value=>@team.id%>
 
-<%if @friends.empty?%>
-  <span>没有可以邀请加入的朋友，可能你的朋友都已经加入了这只球队</span>
-<%else%>
-  <% form_for :team_join_request, :url => team_join_invitations_path, :method=>"POST" do |f| %>
-    <%= f.hidden_field :team_id,  :value=>@team.id%>
+      <%@friends.each do |user|%>
+        <div class="icon_select">
+          <%= render(:partial => 'shared/user_icon', :object => user)%>
+          <div class="input"><%= check_box_tag "users_id[]", user.id%></div>
+        </div>
+      <%end%>
+      <div class="clearBoth"></div>
 
-    <%@friends.each do |user|%>
-      <div class="icon_select">
-        <%= render(:partial => 'shared/user_icon', :object => user)%>
-        <div class="input"><%= check_box_tag "users_id[]", user.id%></div>
-      </div>
-    <%end%>
-    <div class="clearBoth"></div>
-
-    <span>留言</span><br />
-    <%= f.text_area :message, :cols => 40, :rows => 3 %><br />
-    <%= f.submit "邀请" %><br />
-  <% end %>
-
-<%end%>
+      <span>留言</span><br />
+      <%= f.text_area :message, :cols => 40, :rows => 3 %><br />
+      <%= f.submit "邀请" %><br />
+    <% end %>
+  <%end%>
+</div>
