--- a/app/views/training_views/show.html.erb
+++ b/app/views/training_views/show.html.erb
@@ -3,56 +3,54 @@
   <%= stylesheet_link_tag 'activityitem' %>
 <%end%>
 
-<h1><%=h @title%></h1>
 <div id="wide_left_content">
-<div class="seperateLine"></div>
-
-<div style="margin-bottom:20px">
-<div class="activity" style="border:none;">
-  <div class="activity_date">
-    <div class="day">
-      <%= month_calendar_link(@training.start_time.strftime('%m'), @training.start_time)%>.<%= month_day_link(@training.start_time.day, @training.start_time)%></div>
-    <div class="week"><%= wday_text @training.start_time.wday%></div>
-  </div>
-  <div class="activity_content">
-    队伍: <%= link_to(@training.team.shortname, team_view_path(@training.team.id))%>
-    <br/><br/>
-    时间: <%= @training.start_time.strftime('%H:%M')%>-<%= @training.end_time.strftime('%H:%M')%>
-    <br/><br/>
-    场地: <%= link_to_if !@training.football_ground_id.nil?, h(@training.location), football_ground_path(@training.football_ground_id)%>
-    <br/><br/>
-    <%if logged_in? %>
-      <%=link_to_if(@training.can_be_joined_by?(current_user), '我去', training_training_joins_path(@training), :method=>'post'){} %>
-      <%=link_to_if(@training.can_be_quited_by?(current_user), '我不去', training_training_join_path(@training, 0), :method=>'delete'){} %>
-    <%end%>
-    <%if logged_in?%> 
-      <div style="float:right">
-        <%if @training.can_be_modified_by?(current_user)%>
-          > <%=link_to '修改', edit_training_path(@training) %>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <div class="sect">
+    <h2><%= h @title%></h2>
+    <div class="activity" style="border:none;">
+      <div class="activity_date">
+        <div class="day">
+          <%= month_calendar_link(@training.start_time.strftime('%m'), @training.start_time)%>.<%= month_day_link(@training.start_time.day, @training.start_time)%></div>
+        <div class="week"><%= wday_text @training.start_time.wday%></div>
+      </div>
+      <div class="activity_content">
+        队伍: <%= link_to(@training.team.shortname, team_view_path(@training.team.id))%>
+        <br/><br/>
+        时间: <%= @training.start_time.strftime('%H:%M')%>-<%= @training.end_time.strftime('%H:%M')%>
+        <br/><br/>
+        场地: <%= link_to_if !@training.football_ground_id.nil?, h(@training.location), football_ground_path(@training.football_ground_id)%>
+        <br/><br/>
+        <%if logged_in? %>
+          <%=link_to_if(@training.can_be_joined_by?(current_user), '我去', training_training_joins_path(@training), :method=>'post'){} %>
+          <%=link_to_if(@training.can_be_quited_by?(current_user), '我不去', training_training_join_path(@training, 0), :method=>'delete'){} %>
         <%end%>
-        <% if @training.can_be_destroyed_by?(current_user) %>
-          > <%=link_to '删除', training_path(@training), :method=>'delete'%>
+        <%if logged_in?%> 
+          <div style="float:right">
+            <%if @training.can_be_modified_by?(current_user)%>
+              > <%=link_to '修改', edit_training_path(@training) %>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <%end%>
+            <% if @training.can_be_destroyed_by?(current_user) %>
+              > <%=link_to '删除', training_path(@training), :method=>'delete'%>
+            <%end%>
+          </div>
         <%end%>
       </div>
-    <%end%>
+      <div class="activity_icon">
+        <%= team_image_link @training.team, :class=>"icon" %>
+      </div>
+      <div class="clearBoth"></div>
+    </div>
   </div>
-  <div class="activity_icon">
-    <%= team_image_link @training.team, :class=>"icon" %>
-  </div>
-  <div class="clearBoth"></div>
-</div>
 
 <%if !@training.summary.blank?%>
   <div class="tab_container">
-  <span class="tab_link" style="margin-left: 10px;">本次训练说明</span>
-  <div class="tab">
-    <p><%=simple_format auto_link(h(@training.summary), :urls)%></p>
-  </div>
+    <span class="tab_link" style="margin-left: 10px;">本次训练说明</span>
+    <div class="tab">
+      <p><%=simple_format auto_link(h(@training.summary), :urls)%></p>
+    </div>
   </div>
 <%end%>
 
-<div class="seperateLine clearBoth"></div>
-  <div style="margin-bottom:20px">
+  <div class="sect">
     <h2>关于本次训练的讨论</h2>
     <%= render(:partial => 'posts/post_list', :object => @posts)%>
     <div style="margin: 5px 10px  0 10px;float:right">
@@ -63,19 +61,18 @@
     </div>
   </div>
 </div>
-</div>
 
 <div id="narrow_right_content">
-  <div class="seperateLine clearBoth"></div>
-  <div style="margin-bottom:20px">
+  <div class="sect">
     <h2>参加这次训练的人</h2>
     <%= render(:partial => 'shared/user_icon', :collection => @training.users.joined)%>
+    <div class="clearBoth"></div>
   </div>
 
-  <div class="seperateLine clearBoth"></div>
-  <div style="margin-bottom:20px">
+  <div class="sect">
     <h2>尚未决定是否参加的人</h2>
     <%= render(:partial => 'shared/user_icon', :collection => @training.users.undetermined)%>
+    <div class="clearBoth"></div>
   </div>
 </div>
 
