--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -2,10 +2,8 @@
   <%= stylesheet_link_tag 'activityitem' %>
 <%end%>
 
-<h1><%=h @title%></h1>
-<div id="wide_left_content">
-<div class="seperateLine" style="margin-bottom:20px"></div>
-<%= render(:partial => 'shared/training_list', :object => @trainings, :locals => {:display_team => @team_display})%>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <%= render(:partial => 'shared/training_list', :object => @trainings, :locals => {:display_team => @team_display})%>
 </div>
-
 <div class="clearBoth"></div>
