--- a/app/views/user_views/show.html.erb
+++ b/app/views/user_views/show.html.erb
@@ -9,150 +9,166 @@
   <%= stylesheet_link_tag 'activityitem' %>
 <%end%>
 
-<h1><%=h @title%></h1>
 <div id="left_content">
-<div class="seperateLine"></div>
+  <div class="sect">
+    <%if @firend_request != nil || @firend_invitation != nil || @user_invitation_count > 0 ||  @team_invitation_count > 0%>
+    <div class="notification">
+      <%if @firend_request != nil%>
+        <span>等待<%=h @user.nickname%>确认朋友邀请</span>
+      <%end%>
 
-<%if @firend_request != nil || @firend_invitation != nil || @user_invitation_count > 0 ||  @team_invitation_count > 0%>
-<div class="notification">
-  <%if @firend_request != nil%>
-    <span>等待<%=h @user.nickname%>确认朋友邀请</span>
-  <%end%>
+      <%if @firend_invitation != nil%>
+        <span><%=h @user.nickname%>希望和你成为朋友</span>
+        <%= link_to '接受', friend_relations_path(:request_id=>@firend_invitation.id, :back_uri => request.request_uri), :method => :post %>
+        <%= link_to '拒绝', friend_invitation_path(@firend_invitation, :back_uri => request.request_uri), :method => :delete %>
+      <%end%>
 
-  <%if @firend_invitation != nil%>
-    <span><%=h @user.nickname%>希望和你成为朋友</span>
-    <%= link_to '接受', friend_relations_path(:request_id=>@firend_invitation.id, :back_uri => request.request_uri), :method => :post %>
-    <%= link_to '拒绝', friend_invitation_path(@firend_invitation, :back_uri => request.request_uri), :method => :delete %>
-  <%end%>
-  
-  <%if @user_invitation_count > 0 ||  @team_invitation_count > 0%>
-    你有<%= link_to "#{@user_invitation_count}个朋友邀请", friend_invitations_path if @user_invitation_count > 0 %>
-    <%= ', ' if @user_invitation_count > 0 &&  @team_invitation_count > 0 %>
-    <%= link_to "#{@team_invitation_count}个队伍邀请", team_join_invitations_path if @team_invitation_count > 0%>
-  <%end%>
-</div>
-<%end%>
-
-<div class="tab_container">
-
-  <%if logged_in? && @user.id != current_user.id %>
-    <span class="shortcut">
-    <%= link_to(image_tag("sendMail.gif", :title=>"给他发信"), 
-      new_message_path(:to=>@user.id))%>
-    <%= link_to(image_tag("breakUpFriendship.gif", :title=>"不和他玩"), 
-      friend_relation_path(0, :user_id=>@user.id),:method=>"delete") if @are_friends %>
-    <%= link_to(image_tag("inviteFriend.gif", :title=>"申请成为好友"), '#',
-      :onclick=>'wefootball.openDialog(event, "#send_friend_invitation_div");return false') if @can_send_invitation %>
-    <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请加入球队"),
-      new_user_team_join_invitation_path(@user)) %>
-    </span>
-  <%end%>
-  
-  <span class="tab_link" style="margin-left: 10px;">个人信息</span>
-  <%if @user.is_playable%>
-  <span class="tab_link">球员信息</span>
-  <%end%>
-  <div class="tab">
-  <%= "<span>所在地: #{@user.city_text}</span><br/>" unless @user.city_text.nil?%>
-  <%= "<span>生日: #{@user.birthday_text}</span><br/>" unless @user.birthday_text.nil?%>
-  <%= "<span>年龄: #{@user.age}</span><br/>" unless @user.age.nil?%>
-  <%= "<span>性别: #{@user.gender == 1 ? '男' : '女'}</span><br/>" unless @user.gender == 0%>
-  <%= "<span>喜欢的球星: #{h @user.favorite_star}</span><br/>" unless @user.favorite_star.blank?%>
-  <%= "<span>喜欢的球队: #{h @user.favorite_team}</span><br/>" unless @user.favorite_team.blank?%>
-  <%= "<span>blog地址: <a href='#{@user.full_blog_uri}' target='_blank'>#{word_wrap_with_wbr(h(@user.blog))}</a></span><br/>" unless @user.blog.blank?%>
-  <%if !@user.summary.blank?%>
-      <span>自我介绍：</span>
-      <p><%=simple_format auto_link(h(@user.summary), :urls)%></p>
-  <%end%>
-  </div>
-  <%if @user.is_playable%>
-  <div class="tab">
-    <div style="float:left;position:relative">
-      <%= image_tag('small_field.jpg', :title=>"")%>
-      <%@user.positions_array.each do |p|%>
-        <%pos = small_position_icon_position p%>
-        <%= image_tag(p==@user.premier_position ? 'small_premier_position_icon.gif' : 'small_position_icon.gif',
-            :style=>"position:absolute;left:#{pos[0]}px;top:#{pos[1]}px;", :title=>position_text(p))%>
+      <%if @user_invitation_count > 0 ||  @team_invitation_count > 0%>
+        你有<%= link_to "#{@user_invitation_count}个朋友邀请", friend_invitations_path if @user_invitation_count > 0 %>
+        <%= ', ' if @user_invitation_count > 0 &&  @team_invitation_count > 0 %>
+        <%= link_to "#{@team_invitation_count}个队伍邀请", team_join_invitations_path if @team_invitation_count > 0%>
       <%end%>
     </div>
-    <div style="float:left;margin-left:20px;">
-      <br/>
-      <%= "<span>身高: #{@user.height}cm</span><br/>" unless @user.height.nil?%>
-      <%= "<span>体重: #{@user.weight}kg</span><br/>" unless @user.weight.nil?%>
-      <%= "<span>惯用脚: #{fitfoot_text @user.fitfoot}</span><br/>" unless @user.fitfoot.nil?%>
-      <br/><br/>
-      <%= image_tag('small_premier_position_icon.gif', :title=>"") %><span> 首选位置</span><br/>
-      <%= image_tag('small_position_icon.gif', :title=>"") %><span> 可以踢的位置</span>
-    </div>
-    <div class=" clearBoth"></div>
-  </div>
-  <%end%>
-  
-  <div style="margin: 10px 0 0 10px">
+    <%end%>
+
+    <h2><%=h @user.nickname%>的信息</h2>
+    <div class="tab_container">
     <%if logged_in? && @user.id != current_user.id %>
-    <%= link_to("给他写信", new_message_path(:to=>@user.id))%>
-    <%if @are_friends%>
-      <%= link_to("不和他玩", friend_relation_path(0, :user_id=>@user.id),:method=>"delete")  %>
-    <%elsif @can_send_invitation %>
-      <%= link_to("申请成为朋友", '#',
-        :onclick=>'wefootball.openDialog(event, "#send_friend_invitation_div");return false') %>
+      <span class="shortcut">
+      <%= link_to(image_tag("sendMail.gif", :title=>"给他发信"), 
+        new_message_path(:to=>@user.id))%>
+      <%= link_to(image_tag("breakUpFriendship.gif", :title=>"不和他玩"), 
+        friend_relation_path(0, :user_id=>@user.id),:method=>"delete") if @are_friends %>
+      <%= link_to(image_tag("inviteFriend.gif", :title=>"申请成为好友"), '#',
+        :onclick=>'wefootball.openDialog(event, "#send_friend_invitation_div");return false') if @can_send_invitation %>
+      <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请加入球队"),
+        new_user_team_join_invitation_path(@user)) %>
+      </span>
     <%end%>
-    <%= link_to("邀请加入球队", new_user_team_join_invitation_path(@user)) %>
+
+    <span class="tab_link" style="margin-left: 10px;">个人信息</span>
+    <%if @user.is_playable%>
+    <span class="tab_link">球员信息</span>
+    <%end%>
+    <div class="tab">
+    <%= "<span>所在地: #{@user.city_text}</span><br/>" unless @user.city_text.nil?%>
+    <%= "<span>生日: #{@user.birthday_text}</span><br/>" unless @user.birthday_text.nil?%>
+    <%= "<span>年龄: #{@user.age}</span><br/>" unless @user.age.nil?%>
+    <%= "<span>性别: #{@user.gender == 1 ? '男' : '女'}</span><br/>" unless @user.gender == 0%>
+    <%= "<span>喜欢的球星: #{h @user.favorite_star}</span><br/>" unless @user.favorite_star.blank?%>
+    <%= "<span>喜欢的球队: #{h @user.favorite_team}</span><br/>" unless @user.favorite_team.blank?%>
+    <%= "<span>blog地址: <a href='#{@user.full_blog_uri}' target='_blank'>#{word_wrap_with_wbr(h(@user.blog))}</a></span><br/>" unless @user.blog.blank?%>
+    <%if !@user.summary.blank?%>
+        <span>自我介绍：</span>
+        <p><%=simple_format auto_link(h(@user.summary), :urls)%></p>
+    <%end%>
+    </div>
+    <%if @user.is_playable%>
+    <div class="tab">
+      <div style="float:left;position:relative">
+        <%= image_tag('small_field.jpg', :title=>"")%>
+        <%@user.positions_array.each do |p|%>
+          <%pos = small_position_icon_position p%>
+          <%= image_tag(p==@user.premier_position ? 'small_premier_position_icon.gif' : 'small_position_icon.gif',
+              :style=>"position:absolute;left:#{pos[0]}px;top:#{pos[1]}px;", :title=>position_text(p))%>
+        <%end%>
+      </div>
+      <div style="float:left;margin-left:20px;">
+        <br/>
+        <%= "<span>身高: #{@user.height}cm</span><br/>" unless @user.height.nil?%>
+        <%= "<span>体重: #{@user.weight}kg</span><br/>" unless @user.weight.nil?%>
+        <%= "<span>惯用脚: #{fitfoot_text @user.fitfoot}</span><br/>" unless @user.fitfoot.nil?%>
+        <br/><br/>
+        <%= image_tag('small_premier_position_icon.gif', :title=>"") %><span> 首选位置</span><br/>
+        <%= image_tag('small_position_icon.gif', :title=>"") %><span> 可以踢的位置</span>
+      </div>
+      <div class="clearBoth"></div>
+    </div>
+    <%end%>
+
+    <div style="margin: 10px 0 0 10px">
+      <%if logged_in? && @user.id != current_user.id %>
+      <%= link_to("给他写信", new_message_path(:to=>@user.id))%>
+      <%if @are_friends%>
+        <%= link_to("不和他玩", friend_relation_path(0, :user_id=>@user.id),:method=>"delete")  %>
+      <%elsif @can_send_invitation %>
+        <%= link_to("申请成为朋友", '#',
+          :onclick=>'wefootball.openDialog(event, "#send_friend_invitation_div");return false') %>
+      <%end%>
+      <%= link_to("邀请加入球队", new_user_team_join_invitation_path(@user)) %>
+      <%end%>
+    </div>
+  </div>
+
+    <%if @can_send_invitation%>
+    <div id="send_friend_invitation_div" class="jdialog">
+      <% form_for :friend_invitation, :url => friend_invitations_path, :method=>"POST" do |f| %>
+          <%= f.hidden_field :host_id,  :value=>@user.id%>
+          <span>给<%= @user.nickname%>留个言吧...</span><br />
+          <%= f.text_area :message, :cols => 30, :rows => 2%><br />
+          <%= f.submit "朋友邀请" %>
+          <%= f.submit "撤销", :onclick=>'j("#send_friend_invitation_div").dialog("close");return false;' %>
+      <% end %>  
+    </div>
     <%end%>
   </div>
-</div>
 
+  <div class="sect">
+    <h2><%=h @user.nickname%>的朋友</h2>
+    <%= render(:partial => 'shared/user_icon', :collection => @friends)%>
+    <div class="clearBoth"></div>
+  </div>
 
-<%if @can_send_invitation%>
-<div id="send_friend_invitation_div" class="jdialog">
-  <% form_for :friend_invitation, :url => friend_invitations_path, :method=>"POST" do |f| %>
-      <%= f.hidden_field :host_id,  :value=>@user.id%>
-      <span>给<%= @user.nickname%>留个言吧...</span><br />
-      <%= f.text_area :message, :cols => 30, :rows => 2%><br />
-      <%= f.submit "朋友邀请" %>
-      <%= f.submit "撤销", :onclick=>'j("#send_friend_invitation_div").dialog("close");return false;' %>
-  <% end %>  
-</div>
-<%end%>
-
-<div class="seperateLine"></div>
-<div style="margin-bottom:20px">
-  <h2><%=h @user.nickname%>的朋友</h2>
-  <%= render(:partial => 'shared/user_icon', :collection => @friends)%>
-</div>
-
-<div class=" clearBoth seperateLine"></div>
-<div style="margin-bottom:20px">
-  <h2><%=h @user.nickname%>参加的球队</h2>
-  <%= render(:partial => 'shared/team_icon', :collection => @teams)%>
-</div>
+  <div class="sect">
+    <h2><%=h @user.nickname%>参加的球队</h2>
+    <%= render(:partial => 'shared/team_icon', :collection => @teams)%>
+    <div class="clearBoth"></div>
+  </div>
 </div>
 
 <div id="right_content">
-<%if @trainings.length > 0%>
-  <div class="seperateLine clearBoth"></div>
-  <div style="margin-bottom:20px">
-    <h2><%=h @user.nickname%>最近一次训练</h2>
-    <div class="activity" style="border:none; padding-top: 0px; padding-bottom: 0px;">
-      <%= render :partial=>"shared/training_item", :locals => {:training => @trainings[0]}%>
+  <%if @trainings.length > 0%>
+    <div class="sect">
+      <h2><%=h @user.nickname%>最近一次训练</h2>
+      <div class="activity" style="border:none; padding-top: 0px; padding-bottom: 0px;">
+        <div class="activity_date">
+          <div class="day">
+            <%= month_calendar_link(@trainings[0].start_time.strftime('%m'), @trainings[0].start_time)%>.<%= month_day_link(@trainings[0].start_time.day, @trainings[0].start_time)%></div>
+          <div class="week"><%= wday_text @trainings[0].start_time.wday%></div>
+        </div>
+        <div class="activity_content">
+          <%= @trainings[0].start_time.strftime('%H:%M')%>-<%= @trainings[0].end_time.strftime('%H:%M')%>,
+          <%= link_to_if !@trainings[0].football_ground_id.nil?, h(@trainings[0].location), football_ground_path(@trainings[0].football_ground_id)%>,
+          <%= link_to @trainings[0].team.shortname, team_view_path(@trainings[0].team.id) %>训练
+          <br/><br/>
+          <%if logged_in? %>
+            <%=link_to_if(@trainings[0].can_be_joined_by?(current_user), '我去', training_training_joins_path(@trainings[0]), :method=>'post'){} %>
+            <%=link_to_if(@trainings[0].can_be_quited_by?(current_user), '我不去', training_training_join_path(@trainings[0], 0), :method=>'delete'){} %>
+          <%end%>
+          <%=link_to '详情', training_view_path(@trainings[0])%>
+        </div>
+        <div class="activity_icon">
+          <%= team_image_link @trainings[0].team, :class=>"icon" %>
+        </div>
+        <div class="clearBoth"></div>
+      </div>
       <div class="clearBoth"></div>
     </div>
-  </div>
-<%end%>
+  <%end%>
 
-<%if @matches.length > 0%>
-  <div class="seperateLine clearBoth"></div>
-  <div style="margin-bottom:20px">
-    <h2><%=h @user.nickname%>最近的比赛</h2>
-    <%= render(:partial => 'shared/match_list', :object => @matches)%>
-  </div>
-<%end%>
+  <%if @matches.length > 0%>
+    <div class="sect">
+      <h2><%=h @user.nickname%>最近的比赛</h2>
+      <%= render(:partial => 'shared/match_list', :object => @matches)%>
+    </div>
+    <div class="clearBoth"></div>
+  <%end%>
 
-  <div class="seperateLine clearBoth"></div>
-  <h2><%=h @user.nickname%>的日程</h2>
-  <%= render(:partial => 'shared/highlight_calendar', 
-    :locals => {:date => Date.today, :trainings => @calendar_trainings_hash})%>
-  <%#= render(:partial => 'shared/calendar', 
-    :locals => {:year => Date.today.year, :month => Date.today.month, :trainings => @calendar_trainings_hash})%>
+  <div class="sect">
+    <h2><%=h @user.nickname%>的日程</h2>
+    <%= render(:partial => 'shared/highlight_calendar', 
+      :locals => {:date => Date.today, :trainings => @calendar_trainings_hash})%>
+    <div class="clearBoth"></div>
+  </div>
 </div>
 <div class="clearBoth"></div>
