--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -7,10 +7,10 @@ body {
     line-height: 1.5em;
 }
 
-h1 {font-size:18px; color:#333333; font-family:Verdana;font-weight:normal;margin-top:0}
-h2 {font-size:14px;font-weight:normal;margin-top:0}
+h1 {font-size:18px; color:#333333; font-family:Verdana;font-weight:normal;margin:0}
+h2 {font-size:14px;font-weight:normal;margin:0}
 
-form { padding: 0; border: 0px; }
+form { margin: 0; padding: 0; border: 0px; }
 textarea{ overflow:auto; }
 a { color: #006666; text-decoration: none; }
 a img { border-width:0; }
@@ -105,14 +105,16 @@ table th{ text-align: left; }
     width:330px; float:right;
 }
 
-div.seperateLine {
-    width:100%; 
-    height:15px;
-    margin-left: -5px;
-    background-position: left, bottom;
-    background-repeat: no-repeat;
-    background-image:url(/images/seperateLine.jpg);
-    margin-bottom:0.4em
+div.sect {
+    padding-left:5px;
+    margin-bottom: 20px;
+}
+
+div.sect h2{
+    margin: 0 0 5px -5px;
+    padding: 5px;
+    height: 30px;
+    background:url(/images/seperateLine.jpg) no-repeat left bottom;
 }
 
 div.clearBoth {
@@ -173,11 +175,18 @@ table.form td{
 div.notification {
     background: #F2F7AB;
     padding: 6px 10px;
-    margin: 10px 0px 15px 0px;
+    margin: 5px 0px;
 }
 
 div.tab_container {
+    margin-top:10px;
     margin-bottom:10px;
+}
+
+div.tab_container div.tab h2{
+    margin: 0;
+    height: auto;
+    background:transparent;
 }
 
 .tab {
